--- a/language/ca_ES.po
+++ b/language/ca_ES.po
@@ -2,24 +2,28 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# 
+# Translators:
+# Rubén Alcaraz Martínez <rubenalcarazmartinez@gmail.com>, 2025
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-09-19 11:05-0400\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2025-07-07 16:34+0000\n"
+"Last-Translator: Rubén Alcaraz Martínez <rubenalcarazmartinez@gmail.com>, 2025\n"
+"Language-Team: Catalan (Spain) (https://app.transifex.com/omeka/teams/14184/ca_ES/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: ca_ES\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: Module.php:45
 msgid "Delete events before"
-msgstr ""
+msgstr "Suprimeix els esdeveniments anteriors a"
 
 #: Module.php:46
 msgid ""
@@ -27,46 +31,51 @@ msgid ""
 "have an impact on the performance of your website. Use this form to reduce "
 "the size of the table by deleting events before a certain date."
 msgstr ""
+"La taula de la base de dades d'esdeveniments pot arribar a ser molt gran amb"
+" el temps. Això eventualment pot afectar el rendiment del vostre lloc web. "
+"Utilitzeu aquest formulari per reduir la mida de la taula suprimint "
+"esdeveniments anteriors a una data determinada."
 
 #: Module.php:47
 msgid "yyyy-mm-dd"
-msgstr ""
+msgstr "aaaa-mm-dd"
 
 #: Module.php:66
 #, php-format
 msgid "%s Activity Log events were successfully deleted."
 msgstr ""
+"%s Els esdeveniments del registre d'activitat s'han suprimit correctament."
 
 #: Module.php:333
 msgid "Logged in"
-msgstr ""
+msgstr "Sessió iniciada"
 
 #: Module.php:347
 msgid "Logged out"
-msgstr ""
+msgstr "Sessió tancada"
 
 #: Module.php:369
 #, php-format
 msgid "Created a \"%s\" resource"
-msgstr ""
+msgstr "S'ha creat un recurs \"%s\""
 
 #: Module.php:371
 #, php-format
 msgid "Updated a \"%s\" resource"
-msgstr ""
+msgstr "S'ha actualitzat un recurs \"%s\""
 
 #: Module.php:373
 #, php-format
 msgid "Deleted a \"%s\" resource"
-msgstr ""
+msgstr "S'ha suprimit un recurs \"%s\""
 
 #: Module.php:375 Module.php:459
 msgid "Source: API"
-msgstr ""
+msgstr "Font: API"
 
 #: Module.php:385 Module.php:426
 msgid "View resource"
-msgstr ""
+msgstr "Veure el recurs"
 
 #: Module.php:387
 msgid "Resource unviewable"
@@ -74,153 +83,153 @@ msgstr ""
 
 #: Module.php:390 Module.php:428
 msgid "Resource not found"
-msgstr ""
+msgstr "Recurs no trobat"
 
 #: Module.php:414
 #, php-format
 msgid "Persisted a \"%s\" entity"
-msgstr ""
+msgstr "S'ha mantingut una entitat \"%s\""
 
 #: Module.php:416
 #, php-format
 msgid "Updated a \"%s\" entity"
-msgstr ""
+msgstr "S'ha actualitzat una entitat  \"%s\""
 
 #: Module.php:418
 #, php-format
 msgid "Removed a \"%s\" entity"
-msgstr ""
+msgstr "S'ha suprimit una entitat  \"%s\""
 
 #: Module.php:420
 msgid "Source: Doctrine"
-msgstr ""
+msgstr "Font: Doctrine"
 
 #: Module.php:453
 #, php-format
 msgid "Batch created \"%s\" resources"
-msgstr ""
+msgstr "S'han creat en bloc \"%s\" recursos"
 
 #: Module.php:455
 #, php-format
 msgid "Batch updated \"%s\" resources"
-msgstr ""
+msgstr "S'han actualitzat en bloc \"%s\" recursos"
 
 #: Module.php:457
 #, php-format
 msgid "Batch deleted \"%s\" resources"
-msgstr ""
+msgstr "S'han suprimit en bloc \"%s\" recursos"
 
 #: Module.php:482
 #, php-format
 msgid "Inserted a \"%s\" setting"
-msgstr ""
+msgstr "S'ha inserit un paràmetre de configuració \"%s\""
 
 #: Module.php:484
 #, php-format
 msgid "Updated a \"%s\" setting"
-msgstr ""
+msgstr "S'ha actualitzat un paràmetre de configuració \"%s\""
 
 #: Module.php:486
 #, php-format
 msgid "Deleted a \"%s\" setting"
-msgstr ""
+msgstr "S'ha suprimit un paràmetre de configuració \"%s\""
 
 #: Module.php:488
 msgid "Source: Connection"
-msgstr ""
+msgstr "Font: Connexió"
 
 #: src/Api/Representation/ActivityLogEventRepresentation.php:96
 msgid "View event data"
-msgstr ""
+msgstr "Veure dades de l'esdeveniment"
 
 #: view/activity-log/admin/event/browse.phtml:9
 msgid "Events"
-msgstr ""
+msgstr "Esdeveniments"
 
 #: view/activity-log/admin/event/browse.phtml:9
 msgid "Activity Log"
-msgstr ""
+msgstr "Registre d'activitat"
 
 #: view/activity-log/admin/event/browse.phtml:22
 msgid "Messages"
-msgstr ""
+msgstr "Missatges"
 
 #: view/activity-log/admin/event/browse.phtml:25
 msgid "IP"
-msgstr ""
+msgstr "IP"
 
 #: view/activity-log/admin/event/browse.phtml:26
 msgid "Event name"
-msgstr ""
+msgstr "Nom de l'esdeveniment"
 
 #: view/activity-log/admin/event/browse.phtml:70
 msgid "Filter events"
-msgstr ""
+msgstr "Filtres d'esdeveniment"
 
 #: view/activity-log/admin/event/browse.phtml:76
 msgid "Resource filters"
-msgstr ""
+msgstr "Filtres de recurs"
 
 #: view/activity-log/admin/event/browse.phtml:85
 msgid "User filters"
-msgstr ""
+msgstr "Filtres d'usuari"
 
 #: view/activity-log/admin/event/browse.phtml:95
 msgid "Date filters"
-msgstr ""
+msgstr "Filtres de data"
 
 #: view/activity-log/admin/event/browse.phtml:102
 msgid "Apply filters"
-msgstr ""
+msgstr "Aplica els filtres"
 
 #: view/activity-log/admin/event/browse.phtml:103
 msgid "Clear filters"
-msgstr ""
+msgstr "Esborra els filtres"
 
 #: view/activity-log/admin/event/browse.phtml:112
 msgid "No events found."
-msgstr ""
+msgstr "No s’han trobat esdeveniments."
 
 #: view/activity-log/admin/event/show-data.phtml:4
 msgid "Data"
-msgstr ""
+msgstr "Dades"
 
 #: src/Form/EventFilterForm.php:22
 msgid "Enter an ID"
-msgstr ""
+msgstr "Introduïu un identificador"
 
 #: src/Form/EventFilterForm.php:30
 msgid "Select an event by name"
-msgstr ""
+msgstr "Seleccioneu un esdeveniment pel nom"
 
 #: src/Form/EventFilterForm.php:39
 msgid "Select a resource"
-msgstr ""
+msgstr "Seleccioneu un recurs"
 
 #: src/Form/EventFilterForm.php:50
 msgid "Enter a resource ID"
-msgstr ""
+msgstr "Introduïu un identificador per al recurs"
 
 #: src/Form/EventFilterForm.php:58
 msgid "Select a user"
-msgstr ""
+msgstr "Seleccioneu un usuari"
 
 #: src/Form/EventFilterForm.php:66
 msgid "User role"
-msgstr ""
+msgstr "Rol d'usuari"
 
 #: src/Form/EventFilterForm.php:67
 msgid "Select a user role"
-msgstr ""
+msgstr "Seleccioneu un rol d'usuari"
 
 #: src/Form/EventFilterForm.php:78
 msgid "Enter an IP"
-msgstr ""
+msgstr "Introduïu una IP"
 
 #: src/Form/EventFilterForm.php:85
 msgid "From"
-msgstr ""
+msgstr "Des de"
 
 #: src/Form/EventFilterForm.php:92
 msgid "Before"
-msgstr ""
+msgstr "Abans"
