--- a/language/et.po
+++ b/language/et.po
@@ -2,24 +2,28 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# 
+# Translators:
+# Rivo Zängov <eraser@eraser.ee>, 2025
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-09-19 11:05-0400\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2025-07-07 16:34+0000\n"
+"Last-Translator: Rivo Zängov <eraser@eraser.ee>, 2025\n"
+"Language-Team: Estonian (https://app.transifex.com/omeka/teams/14184/et/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: et\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: Module.php:45
 msgid "Delete events before"
-msgstr ""
+msgstr "Kustuta sündmused enne"
 
 #: Module.php:46
 msgid ""
@@ -39,11 +43,11 @@ msgstr ""
 
 #: Module.php:333
 msgid "Logged in"
-msgstr ""
+msgstr "Sisse loginud"
 
 #: Module.php:347
 msgid "Logged out"
-msgstr ""
+msgstr "Välja loginud"
 
 #: Module.php:369
 #, php-format
@@ -62,11 +66,11 @@ msgstr ""
 
 #: Module.php:375 Module.php:459
 msgid "Source: API"
-msgstr ""
+msgstr "Allikas: API"
 
 #: Module.php:385 Module.php:426
 msgid "View resource"
-msgstr ""
+msgstr "Vaata ressurssi"
 
 #: Module.php:387
 msgid "Resource unviewable"
@@ -74,7 +78,7 @@ msgstr ""
 
 #: Module.php:390 Module.php:428
 msgid "Resource not found"
-msgstr ""
+msgstr "Lehekülge ei leitud"
 
 #: Module.php:414
 #, php-format
@@ -93,7 +97,7 @@ msgstr ""
 
 #: Module.php:420
 msgid "Source: Doctrine"
-msgstr ""
+msgstr "Allikas: Doktriin"
 
 #: Module.php:453
 #, php-format
@@ -127,31 +131,31 @@ msgstr ""
 
 #: Module.php:488
 msgid "Source: Connection"
-msgstr ""
+msgstr "Allikas: Ühendus"
 
 #: src/Api/Representation/ActivityLogEventRepresentation.php:96
 msgid "View event data"
-msgstr ""
+msgstr "Vaata sündmuse andmeid"
 
 #: view/activity-log/admin/event/browse.phtml:9
 msgid "Events"
-msgstr ""
+msgstr "Sündmused"
 
 #: view/activity-log/admin/event/browse.phtml:9
 msgid "Activity Log"
-msgstr ""
+msgstr "Tegevuste logi"
 
 #: view/activity-log/admin/event/browse.phtml:22
 msgid "Messages"
-msgstr ""
+msgstr "Sõnumid"
 
 #: view/activity-log/admin/event/browse.phtml:25
 msgid "IP"
-msgstr ""
+msgstr "IP"
 
 #: view/activity-log/admin/event/browse.phtml:26
 msgid "Event name"
-msgstr ""
+msgstr "Sündmuse nimi"
 
 #: view/activity-log/admin/event/browse.phtml:70
 msgid "Filter events"
@@ -163,59 +167,59 @@ msgstr ""
 
 #: view/activity-log/admin/event/browse.phtml:85
 msgid "User filters"
-msgstr ""
+msgstr "Kasutaja filtrid"
 
 #: view/activity-log/admin/event/browse.phtml:95
 msgid "Date filters"
-msgstr ""
+msgstr "Kuupäeva filtrid"
 
 #: view/activity-log/admin/event/browse.phtml:102
 msgid "Apply filters"
-msgstr ""
+msgstr "Rakenda filtreid"
 
 #: view/activity-log/admin/event/browse.phtml:103
 msgid "Clear filters"
-msgstr ""
+msgstr "Tühjenda filtreid"
 
 #: view/activity-log/admin/event/browse.phtml:112
 msgid "No events found."
-msgstr ""
+msgstr "Sündmusi ei leitud."
 
 #: view/activity-log/admin/event/show-data.phtml:4
 msgid "Data"
-msgstr ""
+msgstr "Andmed"
 
 #: src/Form/EventFilterForm.php:22
 msgid "Enter an ID"
-msgstr ""
+msgstr "Sisesta ID"
 
 #: src/Form/EventFilterForm.php:30
 msgid "Select an event by name"
-msgstr ""
+msgstr "Vali sündmu snime järgi"
 
 #: src/Form/EventFilterForm.php:39
 msgid "Select a resource"
-msgstr ""
+msgstr "Vali ressurss"
 
 #: src/Form/EventFilterForm.php:50
 msgid "Enter a resource ID"
-msgstr ""
+msgstr "Sisesta ressursi ID"
 
 #: src/Form/EventFilterForm.php:58
 msgid "Select a user"
-msgstr ""
+msgstr "Vali kasutaja"
 
 #: src/Form/EventFilterForm.php:66
 msgid "User role"
-msgstr ""
+msgstr "Kasutaja roll"
 
 #: src/Form/EventFilterForm.php:67
 msgid "Select a user role"
-msgstr ""
+msgstr "Vali kasutaja roll"
 
 #: src/Form/EventFilterForm.php:78
 msgid "Enter an IP"
-msgstr ""
+msgstr "Sisesta IP"
 
 #: src/Form/EventFilterForm.php:85
 msgid "From"
@@ -223,4 +227,4 @@ msgstr ""
 
 #: src/Form/EventFilterForm.php:92
 msgid "Before"
-msgstr ""
+msgstr "Enne"
