--- a/language/it.po
+++ b/language/it.po
@@ -2,24 +2,28 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# 
+# Translators:
+# Giorgio Comai <g@giorgiocomai.eu>, 2025
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-09-19 11:05-0400\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2025-07-07 16:34+0000\n"
+"Last-Translator: Giorgio Comai <g@giorgiocomai.eu>, 2025\n"
+"Language-Team: Italian (https://app.transifex.com/omeka/teams/14184/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: it\n"
+"Plural-Forms: nplurals=3; plural=n == 1 ? 0 : n != 0 && n % 1000000 == 0 ? 1 : 2;\n"
 
 #: Module.php:45
 msgid "Delete events before"
-msgstr ""
+msgstr "Elimina eventi antecedenti"
 
 #: Module.php:46
 msgid ""
@@ -27,46 +31,50 @@ msgid ""
 "have an impact on the performance of your website. Use this form to reduce "
 "the size of the table by deleting events before a certain date."
 msgstr ""
+"La tabella del database degli eventi può diventare di dimensioni molto "
+"elevate con il tempo. Questo potrebbe avere un impatto sulla performance del"
+" tuo sito. Usa questo modulo per ridurre le dimensioni della tabella "
+"eliminando gli eventi registrati prima di una certa data."
 
 #: Module.php:47
 msgid "yyyy-mm-dd"
-msgstr ""
+msgstr "aaaa-mm-gg"
 
 #: Module.php:66
 #, php-format
 msgid "%s Activity Log events were successfully deleted."
-msgstr ""
+msgstr "%sEventi del log attività eliminati correttamente."
 
 #: Module.php:333
 msgid "Logged in"
-msgstr ""
+msgstr "Accesso effettuato"
 
 #: Module.php:347
 msgid "Logged out"
-msgstr ""
+msgstr "Uscito"
 
 #: Module.php:369
 #, php-format
 msgid "Created a \"%s\" resource"
-msgstr ""
+msgstr "Creata una risorsa \"%s\""
 
 #: Module.php:371
 #, php-format
 msgid "Updated a \"%s\" resource"
-msgstr ""
+msgstr "Aggiornata una risorsa \"%s\""
 
 #: Module.php:373
 #, php-format
 msgid "Deleted a \"%s\" resource"
-msgstr ""
+msgstr "Eliminata una risorsa \"%s\""
 
 #: Module.php:375 Module.php:459
 msgid "Source: API"
-msgstr ""
+msgstr "Fonte: API"
 
 #: Module.php:385 Module.php:426
 msgid "View resource"
-msgstr ""
+msgstr "Visualizza risorsa"
 
 #: Module.php:387
 msgid "Resource unviewable"
@@ -74,153 +82,153 @@ msgstr ""
 
 #: Module.php:390 Module.php:428
 msgid "Resource not found"
-msgstr ""
+msgstr "Risorsa non trovata"
 
 #: Module.php:414
 #, php-format
 msgid "Persisted a \"%s\" entity"
-msgstr ""
+msgstr "Una entità \"%s\" resa persistente"
 
 #: Module.php:416
 #, php-format
 msgid "Updated a \"%s\" entity"
-msgstr ""
+msgstr "Aggiornato una entità \"%s\""
 
 #: Module.php:418
 #, php-format
 msgid "Removed a \"%s\" entity"
-msgstr ""
+msgstr "Rimossa una entità \"%s\""
 
 #: Module.php:420
 msgid "Source: Doctrine"
-msgstr ""
+msgstr "Fonte: dottrina"
 
 #: Module.php:453
 #, php-format
 msgid "Batch created \"%s\" resources"
-msgstr ""
+msgstr "Azione in blocco ha creato \"%s\" risorse"
 
 #: Module.php:455
 #, php-format
 msgid "Batch updated \"%s\" resources"
-msgstr ""
+msgstr "Azione in blocco ha aggiornato \"%s\" risorse"
 
 #: Module.php:457
 #, php-format
 msgid "Batch deleted \"%s\" resources"
-msgstr ""
+msgstr "Azione in blocco ha eliminato \"%s\" risorse"
 
 #: Module.php:482
 #, php-format
 msgid "Inserted a \"%s\" setting"
-msgstr ""
+msgstr "Inserita una impostazione \"%s\""
 
 #: Module.php:484
 #, php-format
 msgid "Updated a \"%s\" setting"
-msgstr ""
+msgstr "Aggiornata una impostazione \"%s\""
 
 #: Module.php:486
 #, php-format
 msgid "Deleted a \"%s\" setting"
-msgstr ""
+msgstr "Eliminata una impostazione \"%s\""
 
 #: Module.php:488
 msgid "Source: Connection"
-msgstr ""
+msgstr "Fonte: connessione"
 
 #: src/Api/Representation/ActivityLogEventRepresentation.php:96
 msgid "View event data"
-msgstr ""
+msgstr "Mostra dati sull'evento"
 
 #: view/activity-log/admin/event/browse.phtml:9
 msgid "Events"
-msgstr ""
+msgstr "Eventi"
 
 #: view/activity-log/admin/event/browse.phtml:9
 msgid "Activity Log"
-msgstr ""
+msgstr "Registro attività"
 
 #: view/activity-log/admin/event/browse.phtml:22
 msgid "Messages"
-msgstr ""
+msgstr "Messaggi"
 
 #: view/activity-log/admin/event/browse.phtml:25
 msgid "IP"
-msgstr ""
+msgstr "IP"
 
 #: view/activity-log/admin/event/browse.phtml:26
 msgid "Event name"
-msgstr ""
+msgstr "Nome dell'evento"
 
 #: view/activity-log/admin/event/browse.phtml:70
 msgid "Filter events"
-msgstr ""
+msgstr "Filtra eventi"
 
 #: view/activity-log/admin/event/browse.phtml:76
 msgid "Resource filters"
-msgstr ""
+msgstr "Filtri risorsa"
 
 #: view/activity-log/admin/event/browse.phtml:85
 msgid "User filters"
-msgstr ""
+msgstr "Filtri utente"
 
 #: view/activity-log/admin/event/browse.phtml:95
 msgid "Date filters"
-msgstr ""
+msgstr "Filtri data"
 
 #: view/activity-log/admin/event/browse.phtml:102
 msgid "Apply filters"
-msgstr ""
+msgstr "Applica filtri"
 
 #: view/activity-log/admin/event/browse.phtml:103
 msgid "Clear filters"
-msgstr ""
+msgstr "Togli filtri"
 
 #: view/activity-log/admin/event/browse.phtml:112
 msgid "No events found."
-msgstr ""
+msgstr "Nessun evento trovato"
 
 #: view/activity-log/admin/event/show-data.phtml:4
 msgid "Data"
-msgstr ""
+msgstr "Dati"
 
 #: src/Form/EventFilterForm.php:22
 msgid "Enter an ID"
-msgstr ""
+msgstr "Inserisci un ID"
 
 #: src/Form/EventFilterForm.php:30
 msgid "Select an event by name"
-msgstr ""
+msgstr "Seleziona un evento per nome"
 
 #: src/Form/EventFilterForm.php:39
 msgid "Select a resource"
-msgstr ""
+msgstr "Seleziona una risorsa"
 
 #: src/Form/EventFilterForm.php:50
 msgid "Enter a resource ID"
-msgstr ""
+msgstr "Entra un ID risorsa"
 
 #: src/Form/EventFilterForm.php:58
 msgid "Select a user"
-msgstr ""
+msgstr "Seleziona un utente"
 
 #: src/Form/EventFilterForm.php:66
 msgid "User role"
-msgstr ""
+msgstr "Ruolo utente"
 
 #: src/Form/EventFilterForm.php:67
 msgid "Select a user role"
-msgstr ""
+msgstr "Seleziona un ruolo utente"
 
 #: src/Form/EventFilterForm.php:78
 msgid "Enter an IP"
-msgstr ""
+msgstr "Inserisci un IP"
 
 #: src/Form/EventFilterForm.php:85
 msgid "From"
-msgstr ""
+msgstr "Da"
 
 #: src/Form/EventFilterForm.php:92
 msgid "Before"
-msgstr ""
+msgstr "Prima"
