--- a/language/mn.po
+++ b/language/mn.po
@@ -2,20 +2,24 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# 
+# Translators:
+# Khaidav T. <khaidaw@yahoo.com>, 2025
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-09-19 11:05-0400\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2025-07-07 16:34+0000\n"
+"Last-Translator: Khaidav T. <khaidaw@yahoo.com>, 2025\n"
+"Language-Team: Mongolian (https://app.transifex.com/omeka/teams/14184/mn/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: mn\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: Module.php:45
 msgid "Delete events before"
@@ -30,7 +34,7 @@ msgstr ""
 
 #: Module.php:47
 msgid "yyyy-mm-dd"
-msgstr ""
+msgstr "yyyy-mm-dd"
 
 #: Module.php:66
 #, php-format
@@ -39,11 +43,11 @@ msgstr ""
 
 #: Module.php:333
 msgid "Logged in"
-msgstr ""
+msgstr "Нэвтэрсэн"
 
 #: Module.php:347
 msgid "Logged out"
-msgstr ""
+msgstr "Гарсан"
 
 #: Module.php:369
 #, php-format
@@ -66,7 +70,7 @@ msgstr ""
 
 #: Module.php:385 Module.php:426
 msgid "View resource"
-msgstr ""
+msgstr "Нөөцийг тоймлож харах"
 
 #: Module.php:387
 msgid "Resource unviewable"
@@ -183,7 +187,7 @@ msgstr ""
 
 #: view/activity-log/admin/event/show-data.phtml:4
 msgid "Data"
-msgstr ""
+msgstr "Өгөгдөл"
 
 #: src/Form/EventFilterForm.php:22
 msgid "Enter an ID"
@@ -195,7 +199,7 @@ msgstr ""
 
 #: src/Form/EventFilterForm.php:39
 msgid "Select a resource"
-msgstr ""
+msgstr "Нөөц сонгох"
 
 #: src/Form/EventFilterForm.php:50
 msgid "Enter a resource ID"
@@ -203,11 +207,11 @@ msgstr ""
 
 #: src/Form/EventFilterForm.php:58
 msgid "Select a user"
-msgstr ""
+msgstr "Хэрэглэгч сонгох"
 
 #: src/Form/EventFilterForm.php:66
 msgid "User role"
-msgstr ""
+msgstr "Хэрэглэгчийн үүрэг"
 
 #: src/Form/EventFilterForm.php:67
 msgid "Select a user role"
